admin label & registration events

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -35,7 +35,7 @@
         {% for school in schools %}
         <div class="col-12 col-md-4">
            <div class="d-flex justify-content-center align-items-center">
-            <a href="{% url 'home:school-slots' school.id %}" class="btn btn-white-white-green btn-circle btn-m"><i class="bi bi-arrow-down"></i></a>
+            <a href="{% url 'home:school-details' school.id %}" class="btn btn-white-white-green btn-circle btn-m"><i class="bi bi-arrow-down"></i></a>
           </div>
             <div class="p-3 border bg-white rounded shadow-sm" type="button" data-bs-toggle="collapse"
                 data-bs-target="#collapseWidthExample{{ school.id }}" aria-expanded="false"
