--- a/home/templates/school/school_details.html
+++ b/home/templates/school/school_details.html
@@ -26,7 +26,7 @@
                             <p class="card-text"><u>{{ event.start_hour }}</u> to <u>{{ event.end_hour }}</u></p>
                             <p class="card-text">Remaining places : {{ event.max_attendees }}</p>
                         </div>
-                        {% if user.is_manager %}
+                        {% if user.isManager %}
                         <div align="center" class="my-2">
                             <a href="{% url 'home:edit-event' school.id event.id%}" class="btn btn-sm btn-success"> Edit this event</a>
                             <a href="{% url 'home:delete-event' event.id%}" class="btn btn-sm btn-danger"> Delete this event</a>
